@@ -329,4 +329,7 @@ The result of this example:
 
 ![Indicator widget](res/doc/example-msg.png)
 
+## SAST Tools
+
+* [PVS-Studio](https://pvs-studio.com/en/pvs-studio/?utm_source=website&utm_medium=github&utm_campaign=open_source) - static analyzer for C, C++, C#, and Java code.
 
