@@ -1,6 +1,6 @@
 /*
- * Copyright (C) 2020 Linux Studio Plugins Project <https://lsp-plug.in/>
- *           (C) 2020 Vladimir Sadovnikov <sadko4u@gmail.com>
+ * Copyright (C) 2023 Linux Studio Plugins Project <https://lsp-plug.in/>
+ *           (C) 2023 Vladimir Sadovnikov <sadko4u@gmail.com>
  *
  * This file is part of lsp-tk-lib
  * Created on: 9 окт. 2019 г.
@@ -35,10 +35,6 @@ namespace lsp
          */
         class Float: public SimpleProperty
         {
-            private:
-                Float & operator = (const Float &);
-                Float(const Float &);
-
             protected:
                 float               fValue;
 
@@ -48,7 +44,12 @@ namespace lsp
 
             protected:
                 explicit Float(prop::Listener *listener = NULL);
+                Float(const Float &) = delete;
+                Float(Float &&) = delete;
                 virtual ~Float();
+
+                Float & operator = (const Float &) = delete;
+                Float & operator = (Float &&) = delete;
 
             public:
                 /**
@@ -109,7 +110,7 @@ namespace lsp
 
                     inline void         listener(prop::Listener *listener)              { pListener = listener;                     }
             };
-        }
+        } /* namespace prop */
 
     } /* namespace tk */
 } /* namespace lsp */
