@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.14 ===
+* Fixed several issues reported by PVS Studio static analyzer.
 * Added tk::Menu::showmp method to show menu at current mouse cursor's position
   as a window transient for specified widget.
 
